# CLizard

./: .travis.yml  CFG.cpp  CFG.h  CMakeLists.txt  Graph.cpp  Graph.h  MBCursus150.json  PDA.cpp  PDA.h  Readme.md  Reeks7Oef3.json  compile.sh  const.cpp  const.h  functions.cpp  functions.h  main.cpp  output-cyk1-abba.txt  output-cyk1-abba.txt.html  output-cyk1-baaba.txt  output-cyk1-baaba.txt.html  output-cyk2-aaabb.txt.html  output-cyk2.txt  pda.json  run.sh  test.sh  travis.yml
grammar/: Hyperlinked C++ BNF Grammar.html  htmlToJson.py
grammar/Hyperlinked C++ BNF Grammar/: Hyperlinked C++ BNF Grammar.html  htmlToJson.py  test.html
grammar/Simple Grammar/: grammar.txt  test.txt  txtToJson.py
indiv/: CFG.cpp  GLRParser.h  Graph.h  MBCursus110.json  PDA.cpp  const.cpp  easy.json  output-cyk2-aaabbb.txt  output-cyk2.txt.html  output-pda2cfg2.txt  test.sh  toDot.sh
src/: AST.cpp  AST.h  GLRP.cpp  GLRP.h  groupPublicPrivate.cpp  groupPublicPrivate.h  includeLoopRecognition.cpp  includeLoopRecognition.h  main.cpp  mainILR.cpp  mainNamingConventions.cpp  namingConventions.cpp  namingConventions.h  rearrangeFunctions.cpp  rearrangeFunctions.h  simplifyMathematicalExpressions.cpp  simplifyMathematicalExpressions.h
src/indiv/: ASTree.cpp  ASTree.h  Ambigu.json  AmbiguB.json  AppendixA.json  CFG.cpp  CFG.h  CMakeLists.txt  CYK.cpp  CYK.h  GLRParser.cpp  GLRParser.h  Graph.cpp  Graph.h  PDA.h  Reeks7Oef2.json  cfgTim.cpp  cfgTim.h  const.cpp  const.h  functions.h  main.cpp  output-cnf1.txt  output-cnf2.txt  output-cyk1.txt  output-cyk2-aaabb.txt  output-pda2cfg1.txt  pdaReeks5Oef4.json  run.sh  trivial.json
src/indiv/Tjenne/: Cfg.cpp  Cfg.h  Node.cpp  Node.h  Pda.cpp  Pda.h  TM.cpp  TM.h
vbn/: rfh.cpp  roc-main.cpp  roc.cpp  roc.h  sam.cpp  sam.h  sammain.cpp  tim.cpp
vbn/GroupingPPTests/: TestClass.cpp  TestClass.h
vbn/ILR/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  D.cpp  D.h
vbn/NamingConvTests/: Combined.cpp  Combined.h  Functions.h  Variables.cpp  Variables.h  allVarTypes  classChecker.json  classInit.cpp  classInit.h  classRec.json  classUses.cpp  run.sh
vbn/NamingConvTests/outputs/: Combined.h
vbn/SimplifyTests/: MATHZ.cpp
vbn/basic/: classes.cpp  factorial.cpp  includes.cpp  int.cpp  intFuncDcl.cpp  intFuncDecl.cpp  intFuncDef.cpp  intInit.cpp  literals.cpp  mathematicalExpressions.cpp  namespaces.cpp  relationalExpressions.cpp  returnFunc.cpp  simpleCombination.cpp  stream.cpp  stringLiteral.cpp  test.h  testTjenne.cpp
